Fix HTML encoding and update image source

--- a/love.html
+++ b/love.html
@@ -105,7 +105,7 @@ button{
 
 <h2 id="typing"></h2>
 
-<img id="slide" src="https://i.imgur.com/7k12EPD.png">
+<img id="slide" src="photo1.jpeg">
 
 <div id="reasons"></div>
 
@@ -222,3 +222,4 @@ document.addEventListener("mousemove",e=>{
 
 </body>
 </html>
+
