Fix HTML entity encoding in love.html

--- a/love.html
+++ b/love.html
@@ -135,11 +135,11 @@ function type(){
 type();
 
 /* ❤️ slideshow (replace with her photos) */
-const photos=[
- "photo1.jpeg",
- "photo2.jpeg",
- "photo3.jpeg"
-];
+// const photos=[
+//  "photo1.jpeg",
+//  "photo2.jpeg",
+//  "photo3.jpeg"
+// ];
 let p=0;
 setInterval(()=>{
  p=(p+1)%photos.length;
@@ -222,4 +222,5 @@ document.addEventListener("mousemove",e=>{
 
 </body>
 </html>
+
 
