Fix HTML formatting and restore content

--- a/yes.html
+++ b/yes.html
@@ -103,7 +103,7 @@ button{
 <h2>You Said YES 🥰</h2>
 
 <!-- cute gif -->
-<img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="180" style="border-radius:20px;">
+<!-- <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="180" style="border-radius:20px;"> -->
 
 <div class="letter">
 Thank you for choosing me ❤️ <br>
@@ -150,3 +150,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
